# lnrpc/routerrpc/router.swagger.json
@@ -1787,6 +1787,10 @@
           "type": "number",
           "format": "double",
           "description": "The time preference for this payment. Set to -1 to optimize for fees\nonly, to 1 to optimize for reliability only or a value inbetween for a mix."
+        },
+        "endorsed": {
+          "type": "boolean",
+          "description": "Signals whether to endorse the outgoing payment."
         }
       }
     },
